Source/WebCore/page/DOMTimer.h
@@ -69,6 +69,8 @@ private:
     friend class Internals;
 
     WEBCORE_EXPORT Seconds intervalClampedToMinimum() const;
+    Seconds intervalClampedToMinimum(bool oneShot) const;
+    bool isOneShot() const;
 
     bool isDOMTimersThrottlingEnabled(Document&) const;
     void updateThrottlingStateIfNecessary(const DOMTimerFireState&);
